manifest/test-manifest/overlays/dev/test-ingress-2.yaml
apiVersion: networking.k8s.io/v1                                                        
kind: Ingress                                                                           
metadata:                                                                               
  name: test-ingress-2                                                               
  namespace: dev                                                                       
  annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/backend-protocol: HTTP
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/security-groups: sg-11111111
      alb.ingress.kubernetes.io/subnets: subnet-11111111,subnet-1111111122
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/healthcheck-port: "8000"
      alb.ingress.kubernetes.io/healthcheck-path: /health_check
      alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
      alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
      alb.ingress.kubernetes.io/healthy-threshold-count: "2"
      alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:11111111:certificate/11111111-222222222
      alb.ingress.kubernetes.io/group.name: test-dev-2
      alb.ingress.kubernetes.io/group.order: '1'
      alb.ingress.kubernetes.io/actions.ssl-redirect: {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
spec:                                                                       
  ingressClassName: alb
  rules:
  - host: test2.aws.test.dev.com
    http:
      paths:
        - pathType: Prefix
          path: / 
          backend:
            service:
              name: test-service-2
              port:
                number: 80
  - host: test3.aws.test.dev.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: test-service-3
              port:
                number: 80
